// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inheritFiles mock multiple extends should render project 1`] = `
Object {
  ".tool.rc": "configuration file",
  "foo.txt": "foo",
}
`;

exports[`inheritFiles mock no extends should render project 1`] = `
Object {
  "foo.txt": "foo",
}
`;

exports[`inheritFiles mock one extends should render project 1`] = `
Object {
  "bar.txt": "bar",
  "foo.txt": "foo",
}
`;

exports[`inheritFiles mock recursive extends should render project 1`] = `
Object {
  "bar.txt": "bar",
  "baz.txt": "baz",
  "foo.txt": "foo",
}
`;
